--- a/GoIT/Lesson_2/task2.html
+++ b/GoIT/Lesson_2/task2.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style type="text/css">
-        table { border-collapse: collapse; width: 400px; }
-        td { border: 5px solid #000; }
-    </style>
     <meta charset="UTF-8">
     <title>Task 2</title>
+    <style type="text/css">
+        table { border-collapse: collapse; width: 600px; height: 600px;}
+        td { border: 5px solid #000; }
+    </style>
 </head>
 <body>
 <table>
     <tr>
-        <td colspan="2">a</td>
-        <td colspan="3">a</td>
-        <td colspan="2" bgcolor="yellow">a</td>
+        <td colspan="2"></td>
+        <td colspan="3"></td>
+        <td colspan="2" bgcolor="yellow"></td>
     </tr>
     <tr>
-        <td rowspan="2">b</td>
-        <td rowspan="4" colspan="4" bgcolor="red">b</td>
-        <td rowspan="2" colspan="2" bgcolor="yellow">b</td>
-    </tr>
-    <tr>
-
-    </tr>
-    <tr>
-        <td rowspan="3">c</td>
-        <td rowspan="2">c</td>
-        <td rowspan="2">c</td>
+        <td rowspan="2"></td>
+        <td rowspan="4" colspan="4" bgcolor="red"></td>
+        <td rowspan="2" colspan="2" bgcolor="yellow"></td>
     </tr>
     <tr>
 
     </tr>
     <tr>
+        <td rowspan="3"></td>
+        <td rowspan="2"></td>
+        <td rowspan="2"></td>
+    </tr>
+    <tr>
 
-        <td rowspan="2" colspan="2" bgcolor="black">d</td>
-        <td colspan="2">d</td>
-        <td colspan="2">d</td>
     </tr>
     <tr>
-        <td rowspan="2" bgcolor="yellow">e</td>
-        <td colspan="2">e</td>
-        <td colspan="2" bgcolor="blue">e</td>
+
+        <td rowspan="2" colspan="2" bgcolor="black"></td>
+        <td colspan="2"></td>
+        <td colspan="2"></td>
     </tr>
     <tr>
-        <td colspan="2">f</td>
-        <td colspan="4">f</td>
+        <td rowspan="2" bgcolor="yellow"></td>
+        <td colspan="2"></td>
+        <td colspan="2" bgcolor="blue"></td>
+    </tr>
+    <tr>
+        <td colspan="2"></td>
+        <td colspan="4"></td>
     </tr>
 </table>
 
