--- a/GoIT/Lesson_1/task2.html
+++ b/GoIT/Lesson_1/task2.html
@@ -5,24 +5,24 @@
     <title>Task2</title>
 </head>
 <body>
-<img src="../Assets/Lesson_1/img/im1.jpg" alt="GeekBrains" width="640" height="492">
+<img src="img/im1.jpg" alt="GeekBrains" width="640" height="492">
 <br>
-<img src="../Assets/Lesson_1/img/im2.jpg" alt="Cat" width="130" height="135">
+<img src="img/im2.jpg" alt="Cat" width="130" height="135">
 <br>
-<img src="../Assets/Lesson_1/img/im3.jpg" alt="Forest" height="111">
+<img src="img/im3.jpg" alt="Forest" height="111">
 <br>
-<img src="../Assets/Lesson_1/img/im4.jpg" alt="OOP" align="center">
+<img src="img/im4.jpg" alt="OOP" align="center">
 <br>
 <p>Adipiscing primis nibh felis ac primis aenean nullam pharetra
-    <img src="../Assets/Lesson_1/img/im1.jpg" alt="GeekBrains" width="130">
+    <img src="img/im1.jpg" alt="GeekBrains" width="130">
     habitasse vestibulum, praesent accumsan conubia
     quis turpis venenatis felis morbi est class, volutpat massa sagittis varius cubilia non tempor sed ornare.</p>
 <p>Dictum quisque nec tincidunt class nibh torquent,
-    <img src="../Assets/Lesson_1/img/im1.jpg" alt="GeekBrains" align="left" width="130">
+    <img src="img/im1.jpg" alt="GeekBrains" align="left" width="130">
     aliquet nullam hac egestas et adipiscing sapien,
     pellentesque vestibulum eros sit magna felis quis interdum sociosqu torquent erat maecenas orci aenean.</p>
 <p>Lorem ipsum ultrices morbi lorem dapibus gravida
-    <img src="../Assets/Lesson_1/img/im1.jpg" alt="GeekBrains" align="right" width="130">
+    <img src="img/im1.jpg" alt="GeekBrains" align="right" width="130">
     quisque blandit nunc ut dictumst, magna sollicitudin
     consequat sociosqu aptent aliquam augue risus quam nunc nullam tempus tempor viverra purus dolor
     interdum velit porta litora.</p>
