lesson three task 2

--- a/GoIT/Lesson_3/task1.html
+++ b/GoIT/Lesson_3/task1.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Task 1</title>
-    <link rel="stylesheet" href="styles/style.css" type="text/css" />
+    <link rel="stylesheet" href="styles/style1.css" type="text/css" />
 </head>
 <body>
 
