--- a/GoIT/Lesson_3/task5.html
+++ b/GoIT/Lesson_3/task5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Task 5</title>
     <link rel="stylesheet" href="styles/style5.css">
 </head>
 <body>
