--- a/GoIT/Lesson_4/task2.html
+++ b/GoIT/Lesson_4/task2.html
@@ -12,6 +12,9 @@
         <span>HOME</span><span>NEWS</span><span>ECONOMICS</span><span>LOCAL</span><span>SPORT</span><span>CULTURE</span><span>TRAVELS</span><span class="floated">MORE</span>
     </div>
 </div>
+<div>
+    some text
+</div>
 
 </body>
 </html>
